tests/expects/map_key_failure/test_map_key.truk
fn main() : i32 {
    var inner: map[i32, i32] = make(@map[i32, i32]);
    var m: map[map[i32, i32], i32] = make(@map[map[i32, i32], i32]);
    m[inner] = 42;
    delete(inner);
    delete(m);
    return 0;
}
